--- a/radioinbrowsersingle.html
+++ b/radioinbrowsersingle.html
@@ -261,7 +261,7 @@
 				<option value="black">Černý</option>
 				<option value="blue">Modrý</option>
 			</select>
-			<a href="https://codeberg.org/phmira/RadioPlayer" id="right" target="_blank">Source Code</a>
+			<a href="https://codeberg.org/phmira/RadioPlayer" id="right" target="_blank">Zdrojový kod</a>
 			<a href="https://simulatorradio.stream/" id="right" target="_blank">Simulator</a>
 		</div>
 
@@ -286,7 +286,7 @@
 					<li><a onclick="beat();">Radio Beat</a></li>
 					<li><a onclick="rockradio();">Rockovy Radio</a></li>
 					<li><a onclick="rockradioalt();">Rockovy Radio - Alternative</a></li>
-					<li><a onclick="heavyrockradio();">Rockovy Radio- Hard & Heavy</a></li>
+					<li><a onclick="heavyrockradio();">Rockovy Radio - Hard & Heavy</a></li>
 					<li><a onclick="hey();">Radio Hey</a></li>
 					<li><a onclick="impuls();">Radio Impuls</a></li>
 					<li><a onclick="city();">Hitradio City</a></li>
