Chnaged links from Codeberg to Github

--- a/singlefile/radioinbrowsersingle.html
+++ b/singlefile/radioinbrowsersingle.html
@@ -261,7 +261,7 @@
 				<option value="black">Černý</option>
 				<option value="blue">Modrý</option>
 			</select>
-			<a href="https://codeberg.org/phmira/RadioPlayer" id="right" target="_blank">Zdrojový kod</a>
+			<a href="https://github.com/miraficus/RadioPlayer" id="right" target="_blank">Zdrojový kod</a>
 			<a href="https://simulatorradio.stream/" id="right" target="_blank">Simulator</a>
 		</div>
 
